--- a/bower.json
+++ b/bower.json
@@ -18,5 +18,8 @@
     "jquery": "~2.1.1",
     "firebase": "2.0.6"
   },
-  "description": "big dada"
+  "description": "big dada",
+  "resolutions": {
+    "bootstrap": "~3.3.5"
+  }
 }
