--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "dadaconf",
+  "name": "sbilstein.com",
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-aws-s3": "^2.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "^0.5.0",
@@ -13,7 +14,6 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-http-server": "^1.1.0",
     "grunt-processhtml": "^0.3.3",
-    "grunt-s3": "^0.2.0-alpha.3",
     "grunt-text-replace": "^0.3.12"
   }
 }
