--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "grunt": "~0.4.5",
     "grunt-aws-s3": "^2.0.0",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-compress": "^1.4.3",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-jshint": "~0.10.0",
